Fix Inline Help Overlap

--- a/client/my-sites/activity/activity-log/style.scss
+++ b/client/my-sites/activity/activity-log/style.scss
@@ -65,7 +65,7 @@
 	bottom: 0;
 	left: 0;
 	background: linear-gradient( to bottom, rgba( 243, 246, 248, 0.1 ), #f3f6f8 );
-	z-index: 179;
+	z-index: z-index( 'root', '.activity-log__fader' );
 	height: 15%;
 	pointer-events: none;
 }
